#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libtree3d], [0.0.0], [ongbw@msu.edu])
AC_CONFIG_SRCDIR([src/tree3d.cpp])
AM_INIT_AUTOMAKE([foreign])
AC_CONFIG_MACRO_DIR([m4])

# Check for libtool
LT_INIT

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for library functions.
AC_CHECK_FUNCS([sqrt])

AC_OUTPUT(Makefile src/Makefile)
